# py-datavolley

./: .bumpversion.cfg  .gitignore  AGENTS.md  IMAGES.md  README.md  main.py  pyproject.toml  test_dv.py  test_main.py
.github/workflows/: release.yml
datavolley/: __init__.py
datavolley/analysis/: __init__.py
datavolley/core/: attack_codes.py  attack_combos.py  code.py  coordiantes.py  coordinates.py  players.py  plays.py  set_calls.py  teams.py  vsm.py  xml_to_dvw.py
datavolley/data/: example_match.dvw
datavolley/io/: dvw.py  plays.py
datavolley/types/: __init__.py  match.py  plays.py
datavolley/utils/: metadata.py
docs/skills/: 01-data-ingest.md  02-file-validation.md  03-data-augmentation.md  04-feature-engineering.md  05-filtering-and-analysis-recipes.md  06-indicators-and-kpis.md  07-modeling-patterns.md  08-court-location-and-visuals.md  README.md  backlog.md  sources.md
