[project]
name = "py-datavolley"
version = "0.1.1"
authors = [{name = "Tyler Widdison"}]
description = "Cousin to the R opnevolley packge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "ruff>=0.13.1",
    "ty>=0.0.1a20",
]

[tool.hatch.build.targets.wheel]
include = [
    "datavolley/",
    "datavolley/data/*.dvw"
]