[project]
name = "py-datavolley"
version = "0.1.4"
authors = [{name = "Tyler Widdison"}]
description = "Cousin to the R opnevolley packge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]

[tool.hatch.build.targets.wheel]
include = [
    "datavolley/",
    "datavolley/data/*.dvw"
]
